plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.apache.commons:commons-compress:1.26.0'
    implementation 'jakarta.validation:jakarta.validation-api:3.1.1'
    implementation 'jakarta.enterprise:jakarta.enterprise.cdi-el-api:4.1.0'
    implementation 'jakarta.interceptor:jakarta.interceptor-api'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    compileOnly('org.projectlombok:lombok:1.18.36')
    annotationProcessor('org.projectlombok:lombok:1.18.36')

    testCompileOnly('org.projectlombok:lombok:1.18.36')
    testAnnotationProcessor('org.projectlombok:lombok:1.18.36')

    runtimeOnly('org.postgresql:postgresql')

    implementation('org.flywaydb:flyway-core:11.3.0')
    implementation('org.flywaydb:flyway-database-postgresql:11.3.0')

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    runtimeOnly('com.h2database:h2')
    testImplementation('com.h2database:h2')
    testImplementation('org.springframework.boot:spring-boot-test')
    testImplementation('org.junit.platform:junit-platform-suite:1.12.0')
    testImplementation('org.junit.platform:junit-platform-suite-api:1.12.0')
    testImplementation('org.testcontainers:junit-jupiter:1.20.6')
    testImplementation('org.testcontainers:postgresql:1.20.6')



}

test {
    useJUnitPlatform()
}